# docs/swagger.json
@@ -200,6 +200,41 @@
                 }
             }
         },
+        "/person/file/delete/{id}": {
+            "delete": {
+                "description": "delete person photo",
+                "tags": [
+                    "Person"
+                ],
+                "summary": "delete photo",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "photo id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "413": {
+                        "description": "Request Entity Too Large"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/person/file/upload/{id}": {
             "post": {
                 "description": "Upload file to s3 storage, use only .jpg and .png",
